Fix button spacing

--- a/_sass/modules/_buttons.scss
+++ b/_sass/modules/_buttons.scss
@@ -24,7 +24,7 @@ BUTTON DEFAULTS
   text-align: center;
   vertical-align: middle;
   margin-top: 1em;
-  margin-right: .7em;
+  margin-right: .3em;
 
 
   // hovering on the btn
